--- a/client/src/index.css
+++ b/client/src/index.css
@@ -122,11 +122,11 @@ button:focus-visible {
 }
 
 /* NavBar CSS */
-.navbar>ul {
+.navbar > ul {
   list-style-type: none;
 }
 
-.navbar>ul>* {
+.navbar > ul > * {
   margin-left: 10px;
   color: black;
 }
@@ -252,7 +252,6 @@ body {
   width: 65px;
 }
 
-
 .autocomplete li {
   padding: 8px;
   background-color: rgba(0, 0, 0, 0.24);
@@ -262,7 +261,7 @@ body {
   overflow: auto;
 }
 
-.autocomplete>.active,
+.autocomplete > .active,
 .autocomplete li:hover {
   background-color: rgba(0, 0, 0, 0.24);
   cursor: pointer;
@@ -344,7 +343,7 @@ select {
   font-weight: bold;
 }
 
-.example>a {
+.example > a {
   color: white;
   font-weight: bold;
   margin-left: 5px;
@@ -399,14 +398,9 @@ select {
 }
 
 .cytoscape-graph {
-  border: 2px solid var(--light-background);
-  border-radius: 0;
-  background-color: var(--light-background);
-  height: 480px;
-  width: 800px;
-  margin-right: 2px;
-  margin-top: 5px;
-  box-shadow: -5px 0px 15px 0px var(--shadow);
+  height: 100%;
+  width: 100%;
+  padding-left: 50px;
 }
 
 .search-box-align {
@@ -436,7 +430,7 @@ select {
   box-shadow: 0px -0px 10px 5px var(--shadow);
 }
 
-.sidebar>h2,
+.sidebar > h2,
 h3,
 p {
   color: black;
@@ -511,14 +505,14 @@ select {
   align-items: center;
 }
 
-.footer>* {
+.footer > * {
   margin-left: 15px;
   color: black;
   font-family: "Lora", serif;
   font-weight: 600;
 }
 
-.footer>*:hover {
+.footer > *:hover {
   color: var(--home-button-hover);
 }
 
@@ -597,12 +591,6 @@ select {
   align-items: center;
 }
 
-.legend h2,
-h3 {
-  color: black;
-  text-align: center;
-}
-
 .legend-text {
   display: inline-block;
 }
@@ -613,17 +601,11 @@ h3 {
   align-items: center;
 }
 
-.bottom-right-legend {
-  position: absolute;
-  right: 0;
-  bottom: 0;
-}
-
 .black-line {
   background-color: black;
   border: none;
   height: 3px;
-  width: 60px;
+  width: 30px;
   display: inline-block;
   margin-bottom: 3px;
 }
@@ -632,7 +614,7 @@ h3 {
   background-color: #aca9a4;
   border: none;
   height: 3px;
-  width: 60px;
+  width: 30px;
   display: inline-block;
   margin-bottom: 3px;
 }
@@ -661,35 +643,36 @@ h3 {
 .source-node-symbol {
   border: 2px solid black;
   background-color: var(--reed-red);
-  height: 25px;
   border-radius: 50%;
-  width: 25px;
+  height: 15px;
+  width: 15px;
   display: inline-block;
 }
 
 .go-protein-symbol {
   border: 2px solid black;
   background-color: var(--graph-blue);
-  height: 25px;
-  width: 25px;
+  height: 15px;
+  width: 15px;
   display: inline-block;
 }
 
 .go-source-symbol {
   border: 2px solid black;
   background-color: var(--reed-red);
-  height: 25px;
-  width: 25px;
+  height: 15px;
+  width: 15px;
   display: inline-block;
 }
 
 .intermediate-symbol {
   border: 2px solid black;
   background-color: var(--graph-tan);
-  height: 15px;
   border-radius: 50%;
+  height: 15px;
   width: 15px;
   display: inline-block;
+  margin-top: none;
 }
 
 .loader {
@@ -725,8 +708,8 @@ h3 {
   text-align: center;
 }
 
-.about-body>p,
-.about-body>h3,
+.about-body > p,
+.about-body > h3,
 .about-body-text {
   color: white;
   text-align: justify;
@@ -737,25 +720,25 @@ h3 {
   color: white;
 }
 
-.about-body>ul {
+.about-body > ul {
   list-style-type: disc;
 }
 
-.about-body>p>a,
-.about-list>li>a,
+.about-body > p > a,
+.about-list > li > a,
 .about-body-link {
   color: white;
   text-decoration: underline;
   cursor: pointer;
 }
 
-.about-body>p>a:hover,
-.about-body>p>ul>li>a:hover,
+.about-body > p > a:hover,
+.about-body > p > ul > li > a:hover,
 .about-body-link:hover {
   color: var(--text-hover);
 }
 
-.about-list>li>a:hover {
+.about-list > li > a:hover {
   color: var(--text-hover);
 }
 
@@ -779,8 +762,8 @@ h3 {
   text-align: center;
 }
 
-.faq-body>p,
-.faq-body>h3,
+.faq-body > p,
+.faq-body > h3,
 .faq-body-text {
   color: white;
   text-align: justify;
@@ -791,25 +774,25 @@ h3 {
   color: white;
 }
 
-.faq-body>ul {
+.faq-body > ul {
   list-style-type: disc;
 }
 
-.faq-body>p>a,
-.faq-list>li>a,
+.faq-body > p > a,
+.faq-list > li > a,
 .faq-body-link {
   color: white;
   text-decoration: underline;
   cursor: pointer;
 }
 
-.faq-body>p>a:hover,
-.faq-body>p>ul>li>a:hover,
+.faq-body > p > a:hover,
+.faq-body > p > ul > li > a:hover,
 .faq-body-link:hover {
   color: var(--text-hover);
 }
 
-.faq-list>li>a:hover {
+.faq-list > li > a:hover {
   color: var(--text-hover);
 }
 
@@ -833,8 +816,8 @@ h3 {
   text-align: center;
 }
 
-.tos-body>p,
-.tos-body>h3,
+.tos-body > p,
+.tos-body > h3,
 .tos-body-text {
   color: white;
   text-align: justify;
@@ -845,25 +828,25 @@ h3 {
   color: white;
 }
 
-.tos-body>ul {
+.tos-body > ul {
   list-style-type: disc;
 }
 
-.tos-body>p>a,
-.tos-list>li>a,
+.tos-body > p > a,
+.tos-list > li > a,
 .tos-body-link {
   color: white;
   text-decoration: underline;
   cursor: pointer;
 }
 
-.tos-body>p>a:hover,
-.tos-body>p>ul>li>a:hover,
+.tos-body > p > a:hover,
+.tos-body > p > ul > li > a:hover,
 .tos-body-link:hover {
   color: var(--text-hover);
 }
 
-.tos-list>li>a:hover {
+.tos-list > li > a:hover {
   color: var(--text-hover);
 }
 
@@ -959,6 +942,7 @@ h3 {
   margin-left: 10px;
   margin-top: 5px;
   cursor: pointer;
+  pointer-events: auto; /* This makes the div non-interactive */
 }
 
 .ancestor-input {
@@ -1000,43 +984,33 @@ h3 {
 }
 
 .align-change-layout {
-  display: inline-flex;
   align-items: center;
-}
-
-.align-change-layout strong {
-  color: black !important;
+  justify-content: center;
 }
 
 /* Tooltip container */
 .layout-tooltip {
-  position: relative;
-  display: inline-block;
-  border-bottom: 1px dotted black;
+  display: flex;
+  align-self: center;
+  margin-bottom: 10px;
 }
 
 /* Tooltip text */
 .layout-tooltip .tooltiptext {
   visibility: hidden;
-  width: auto;
-  bottom: 100%;
-  left: 50%;
-  transform: translateX(-50%);
-  white-space: nowrap;
-  background-color: var(--graph-tan);
-  color: black !important;
-  text-align: center;
-  padding: 5px 10px;
-  border-radius: 6px;
-  position: absolute;
-  z-index: 1;
-  display: none;
 }
 
 /* Show the tooltip text when you mouse over the tooltip container */
 .layout-tooltip:hover .tooltiptext {
   visibility: visible;
-  display: inline-block;
+  align-self: center;
+}
+
+.layout-icon {
+  border: 1px dotted black;
+  pointer-events: auto;
+  align-items: center;
+
 }
 
 .mode-container {
@@ -1106,6 +1080,7 @@ h3 {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  color: black;
   /* Minimum height is 100% of the viewport height */
 }
 
@@ -1118,4 +1093,22 @@ h3 {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+}
+
+.graph-panel-container {
+  height: 100%;
+  width: 100%;
+  position: relative;
+}
+
+.legend-max {
+  padding-left: 10px;
+  width: 10%;
+  height: 10%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 10;
+  font-size: 10px;
+  pointer-events: none; /* This makes the div non-interactive */
 }
