--- a/client/src/index.css
+++ b/client/src/index.css
@@ -122,11 +122,11 @@ button:focus-visible {
 }
 
 /* NavBar CSS */
-.navbar > ul {
+.navbar>ul {
   list-style-type: none;
 }
 
-.navbar > ul > * {
+.navbar>ul>* {
   margin-left: 10px;
   color: black;
 }
@@ -139,6 +139,7 @@ button:focus-visible {
   border-bottom: solid;
   background: #a70e16;
   min-width: 1080px;
+  max-width: 100%;
   /* max-width: 1080px; */
   max-height: 70px;
 }
@@ -261,7 +262,7 @@ body {
   overflow: auto;
 }
 
-.autocomplete > .active,
+.autocomplete>.active,
 .autocomplete li:hover {
   background-color: rgba(0, 0, 0, 0.24);
   cursor: pointer;
@@ -343,7 +344,7 @@ select {
   font-weight: bold;
 }
 
-.example > a {
+.example>a {
   color: white;
   font-weight: bold;
   margin-left: 5px;
@@ -352,8 +353,26 @@ select {
 }
 
 /* Graph Exploration */
+.graph-exploration {
+  display: flex;
+  flex-wrap: wrap;
+  max-height: 180px;
+}
+
+.graph-exploration-title {
+  margin-left: 16px;
+  margin-top: 16px;
+  margin-bottom: 0;
+}
+
+.align-graph-exploration {
+  display: flex;
+}
+
 .new-source {
-  padding: 8px 16px;
+  margin-top: 0;
+  margin-left: 16px;
+  margin-bottom: 16px;
   min-height: 50px;
   min-width: 96px;
   word-wrap: nowrap;
@@ -361,28 +380,103 @@ select {
   color: #fff;
   border: 2px solid var(--light-background);
   border-radius: 5px;
-  order: 4;
-  flex: 0 1 auto;
-  align-self: auto;
-  height: 30px;
   text-align: center;
 }
 
+.new-source-container {
+  padding-left: 24px;
+  flex: 1;
+  max-height: 90px;
+  margin-left: auto;
+  margin-right: auto;
+  /* max-width: 240px; */
+}
+
+.new-source-container h5 {
+  margin-bottom: 8px;
+  margin-top: 8px;
+}
+
+.go-container {
+  margin-left: auto;
+  margin-right: auto;
+  flex: 1;
+  max-height: 100px;
+  /* max-width: 900px; */
+}
+
+.go-container h5 {
+  margin-bottom: 8px;
+  margin-top: 8px;
+}
+
+.new-go-form {
+  display: inline-block;
+}
+
+.go-selector-container {
+  margin-left: 24px;
+  margin-right: 36px;
+  display: flex;
+}
+
+.ancestor-input {
+  width: 120px;
+  margin-right: 48px;
+}
+
+.ancestor-input input {
+  width: 120px;
+}
+
+.ancestor-input label {
+  font-size: small;
+  color: black !important;
+}
+
+.descendant-input {
+  width: 120px;
+}
+
+.descendant-input input {
+  width: 120px;
+}
+
+.descendant-input label {
+  font-size: small;
+  color: black !important;
+  margin-top: 0px;
+}
+
+.align-selectors {
+  display: flex;
+}
+
+.hierarchy-input-container {
+  position: relative;
+}
+
 .new-go-term-button {
-  padding: 8px 16px;
+  display: inline-block;
+  margin-left: 36px;
   min-height: 50px;
-  min-width: 96px;
-  margin-top: 5px;
+  min-width: 200px;
   word-wrap: nowrap;
   background: #000;
   color: #fff;
   border: 2px solid var(--light-background);
   border-radius: 5px;
-  order: 4;
-  flex: 0 1 auto;
-  align-self: auto;
-  height: 30px;
   text-align: center;
+}
+
+.exports-container {
+  text-align: center;
+  flex: 1;
+}
+
+.exports-container h5 {
+  margin-bottom: 8px;
+  margin-top: 0;
 }
 
 .search {
@@ -430,7 +524,7 @@ select {
   box-shadow: 0px -0px 10px 5px var(--shadow);
 }
 
-.sidebar > h2,
+.sidebar>h2,
 h3,
 p {
   color: black;
@@ -493,6 +587,7 @@ select {
   background-color: white;
   cursor: pointer;
   color: #000;
+  z-index: 999;
 }
 
 .footer {
@@ -505,14 +600,14 @@ select {
   align-items: center;
 }
 
-.footer > * {
+.footer>* {
   margin-left: 15px;
   color: black;
   font-family: "Lora", serif;
   font-weight: 600;
 }
 
-.footer > *:hover {
+.footer>*:hover {
   color: var(--home-button-hover);
 }
 
@@ -716,8 +811,8 @@ select {
   text-align: center;
 }
 
-.about-body > p,
-.about-body > h3,
+.about-body>p,
+.about-body>h3,
 .about-body-text {
   color: white;
   text-align: justify;
@@ -728,25 +823,25 @@ select {
   color: white;
 }
 
-.about-body > ul {
+.about-body>ul {
   list-style-type: disc;
 }
 
-.about-body > p > a,
-.about-list > li > a,
+.about-body>p>a,
+.about-list>li>a,
 .about-body-link {
   color: white;
   text-decoration: underline;
   cursor: pointer;
 }
 
-.about-body > p > a:hover,
-.about-body > p > ul > li > a:hover,
+.about-body>p>a:hover,
+.about-body>p>ul>li>a:hover,
 .about-body-link:hover {
   color: var(--text-hover);
 }
 
-.about-list > li > a:hover {
+.about-list>li>a:hover {
   color: var(--text-hover);
 }
 
@@ -770,8 +865,8 @@ select {
   text-align: center;
 }
 
-.faq-body > p,
-.faq-body > h3,
+.faq-body>p,
+.faq-body>h3,
 .faq-body-text {
   color: white;
   text-align: justify;
@@ -782,25 +877,25 @@ select {
   color: white;
 }
 
-.faq-body > ul {
+.faq-body>ul {
   list-style-type: disc;
 }
 
-.faq-body > p > a,
-.faq-list > li > a,
+.faq-body>p>a,
+.faq-list>li>a,
 .faq-body-link {
   color: white;
   text-decoration: underline;
   cursor: pointer;
 }
 
-.faq-body > p > a:hover,
-.faq-body > p > ul > li > a:hover,
+.faq-body>p>a:hover,
+.faq-body>p>ul>li>a:hover,
 .faq-body-link:hover {
   color: var(--text-hover);
 }
 
-.faq-list > li > a:hover {
+.faq-list>li>a:hover {
   color: var(--text-hover);
 }
 
@@ -824,8 +919,8 @@ select {
   text-align: center;
 }
 
-.tos-body > p,
-.tos-body > h3,
+.tos-body>p,
+.tos-body>h3,
 .tos-body-text {
   color: white;
   text-align: justify;
@@ -836,25 +931,25 @@ select {
   color: white;
 }
 
-.tos-body > ul {
+.tos-body>ul {
   list-style-type: disc;
 }
 
-.tos-body > p > a,
-.tos-list > li > a,
+.tos-body>p>a,
+.tos-list>li>a,
 .tos-body-link {
   color: white;
   text-decoration: underline;
   cursor: pointer;
 }
 
-.tos-body > p > a:hover,
-.tos-body > p > ul > li > a:hover,
+.tos-body>p>a:hover,
+.tos-body>p>ul>li>a:hover,
 .tos-body-link:hover {
   color: var(--text-hover);
 }
 
-.tos-list > li > a:hover {
+.tos-list>li>a:hover {
   color: var(--text-hover);
 }
 
@@ -950,45 +1045,11 @@ select {
   margin-left: 10px;
   margin-top: 5px;
   cursor: pointer;
-  pointer-events: auto; /* This makes the div non-interactive */
+  pointer-events: auto;
+  /* This makes the div non-interactive */
 }
 
-.ancestor-input {
-  width: 120px;
-}
 
-.ancestor-input input {
-  width: 120px;
-  margin-bottom: 5px;
-}
-
-.ancestor-input label {
-  font-size: small;
-  color: black !important;
-}
-
-.descendant-input {
-  width: 120px;
-}
-
-.descendant-input input {
-  width: 120px;
-  margin-top: 5px;
-}
-
-.descendant-input label {
-  font-size: small;
-  color: black !important;
-  margin-top: 0px;
-}
-
-.align-selectors {
-  display: flex;
-}
-
-.hierarchy-input-container {
-  position: relative;
-}
 
 .info-icon {
   position: absolute;
@@ -1183,5 +1244,6 @@ select {
   left: 0;
   z-index: 10;
   font-size: 10px;
-  pointer-events: none; /* This makes the div non-interactive */
+  pointer-events: none;
+  /* This makes the div non-interactive */
 }
