fixed guide to work on testing page

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -122,11 +122,11 @@ button:focus-visible {
 }
 
 /* NavBar CSS */
-.navbar>ul {
+.navbar > ul {
   list-style-type: none;
 }
 
-.navbar>ul>* {
+.navbar > ul > * {
   margin-left: 10px;
   color: black;
 }
@@ -262,7 +262,7 @@ body {
   overflow: auto;
 }
 
-.autocomplete>.active,
+.autocomplete > .active,
 .autocomplete li:hover {
   background-color: rgba(0, 0, 0, 0.24);
   cursor: pointer;
@@ -344,7 +344,7 @@ select {
   font-weight: bold;
 }
 
-.example>a {
+.example > a {
   color: white;
   font-weight: bold;
   margin-left: 5px;
@@ -524,7 +524,7 @@ select {
   box-shadow: 0px -0px 10px 5px var(--shadow);
 }
 
-.sidebar>h2,
+.sidebar > h2,
 h3,
 p {
   color: black;
@@ -600,14 +600,14 @@ select {
   align-items: center;
 }
 
-.footer>* {
+.footer > * {
   margin-left: 15px;
   color: black;
   font-family: "Lora", serif;
   font-weight: 600;
 }
 
-.footer>*:hover {
+.footer > *:hover {
   color: var(--home-button-hover);
 }
 
@@ -811,8 +811,8 @@ select {
   text-align: center;
 }
 
-.about-body>p,
-.about-body>h3,
+.about-body > p,
+.about-body > h3,
 .about-body-text {
   color: white;
   text-align: justify;
@@ -823,25 +823,25 @@ select {
   color: white;
 }
 
-.about-body>ul {
+.about-body > ul {
   list-style-type: disc;
 }
 
-.about-body>p>a,
-.about-list>li>a,
+.about-body > p > a,
+.about-list > li > a,
 .about-body-link {
   color: white;
   text-decoration: underline;
   cursor: pointer;
 }
 
-.about-body>p>a:hover,
-.about-body>p>ul>li>a:hover,
+.about-body > p > a:hover,
+.about-body > p > ul > li > a:hover,
 .about-body-link:hover {
   color: var(--text-hover);
 }
 
-.about-list>li>a:hover {
+.about-list > li > a:hover {
   color: var(--text-hover);
 }
 
@@ -865,8 +865,8 @@ select {
   text-align: center;
 }
 
-.faq-body>p,
-.faq-body>h3,
+.faq-body > p,
+.faq-body > h3,
 .faq-body-text {
   color: white;
   text-align: justify;
@@ -877,25 +877,25 @@ select {
   color: white;
 }
 
-.faq-body>ul {
+.faq-body > ul {
   list-style-type: disc;
 }
 
-.faq-body>p>a,
-.faq-list>li>a,
+.faq-body > p > a,
+.faq-list > li > a,
 .faq-body-link {
   color: white;
   text-decoration: underline;
   cursor: pointer;
 }
 
-.faq-body>p>a:hover,
-.faq-body>p>ul>li>a:hover,
+.faq-body > p > a:hover,
+.faq-body > p > ul > li > a:hover,
 .faq-body-link:hover {
   color: var(--text-hover);
 }
 
-.faq-list>li>a:hover {
+.faq-list > li > a:hover {
   color: var(--text-hover);
 }
 
@@ -919,8 +919,8 @@ select {
   text-align: center;
 }
 
-.tos-body>p,
-.tos-body>h3,
+.tos-body > p,
+.tos-body > h3,
 .tos-body-text {
   color: white;
   text-align: justify;
@@ -931,25 +931,25 @@ select {
   color: white;
 }
 
-.tos-body>ul {
+.tos-body > ul {
   list-style-type: disc;
 }
 
-.tos-body>p>a,
-.tos-list>li>a,
+.tos-body > p > a,
+.tos-list > li > a,
 .tos-body-link {
   color: white;
   text-decoration: underline;
   cursor: pointer;
 }
 
-.tos-body>p>a:hover,
-.tos-body>p>ul>li>a:hover,
+.tos-body > p > a:hover,
+.tos-body > p > ul > li > a:hover,
 .tos-body-link:hover {
   color: var(--text-hover);
 }
 
-.tos-list>li>a:hover {
+.tos-list > li > a:hover {
   color: var(--text-hover);
 }
 
@@ -1049,8 +1049,6 @@ select {
   /* This makes the div non-interactive */
 }
 
-
-
 .info-icon {
   position: absolute;
   left: -20px;
@@ -1144,7 +1142,6 @@ select {
   border: 1px dotted black;
   pointer-events: auto;
   align-items: center;
-
 }
 
 .mode-container {
@@ -1233,6 +1230,31 @@ select {
   height: 100%;
   width: 100%;
   position: relative;
+}
+
+.left-panel-container {
+  height: 100%;
+  width: 100%;
+}
+
+.right-panel-container {
+  height: 100%;
+  width: 100%;
+}
+
+.graph-exploration-panel-container {
+  height: 100%;
+  width: 100%;
+}
+
+.summary-panel-container {
+  height: 100%;
+  width: 100%;
+}
+
+.statistics-panel-container {
+  height: 100%;
+  width: 100%;
 }
 
 .legend-max {
