--- a/client/src/index.css
+++ b/client/src/index.css
@@ -359,7 +359,8 @@ select {
   max-height: 180px;
 }
 
-.graph-exploration-title, .stats-title {
+.graph-exploration-title,
+.stats-title {
   margin-left: 16px;
   margin-top: 16px;
   margin-bottom: 0;
@@ -1271,41 +1272,52 @@ select {
 }
 
 .stats-tabs {
-
 }
 
-.stats-tab-list{
+.stats-tab-list {
   list-style-type: none; /* Remove bullets */
   padding: 0; /* Remove padding */
   margin: 0; /* Remove margins */
   display: flex;
-
 }
 
-.stats-tab{
+.stats-tab {
   width: 100%;
-  border-bottom: 1px solid #828588;
+  /* border-bottom: 1px solid #828588; */
   padding: 5px;
   text-align: center;
+  background-color: #828588;
 }
 
-.stats-tab:hover{
-  cursor: pointer
+.stats-tab:hover {
+  cursor: pointer;
 }
 
-
-.stats-tab-selected{
-  border-bottom: 0px solid #828588;
+.stats-tab-selected {
+  /* border-bottom: 0px solid #828588;
   border-right: 1px solid #828588;
   border-top: 1px solid #828588;
-  border-left: 1px solid #828588;
+  border-left: 1px solid #828588; */
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
   text-decoration: underline;
+  background-color: white;
+}
+.stats-tab-selected {
+  /* border-bottom: 0px solid #828588;
+  border-right: 1px solid #828588;
+  border-top: 1px solid #828588;
+  border-left: 1px solid #828588; */
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  text-decoration: underline;
+  background-color: white;
+  outline: none;
+
 }
 
-.stats-tab-selected:hover{
-  cursor: auto
+.stats-tab-selected:hover {
+  cursor: auto;
 }
 
 .stats-title {
