--- a/client/src/index.css
+++ b/client/src/index.css
@@ -252,7 +252,7 @@ body {
 
 .k-input {
   margin-top: 1px;
-  width: 24px;
+  width: 40px;
   height: 24px;
   min-height: 24px;
   text-align: center;
@@ -542,6 +542,10 @@ select {
   margin: auto;
 }
 
+.sidebar-button-block{
+  display: block;
+}
+
 .red-sidebar-link {
   font-weight: 500;
   text-decoration: none;
@@ -551,6 +555,7 @@ select {
   border-radius: 10px;
   border: 2px solid black;
   text-align: center;
+  max-width: 500px;
 }
 
 .red-sidebar-link:hover {
@@ -567,6 +572,7 @@ select {
   border-radius: 10px;
   border: 2px solid black;
   text-align: center;
+  max-width: 500px;
 }
 
 .blue-sidebar-link:hover {
@@ -655,13 +661,20 @@ p {
 
 /* Query Error */
 .query-error {
-  align-self: center;
+  margin: auto;
   background-color: #eed202;
   border-radius: 10px;
-  margin-top: 20px;
   padding: 5px;
   color: black;
-  max-width: 1080px;
+  max-width: 75vw;
+  text-align: center;
+  display:flex;
+  justify-content:center;
+}
+.error-icon{
+  margin-right: 10px;
+  align-self: center;
+  height: 50px;
 }
 
 .center-buttons {
@@ -887,7 +900,7 @@ select {
   height: 120px;
   animation: spin 2s linear infinite;
   align-self: center;
-  margin-top: 200px;
+  margin: auto;
 }
 
 .about-body {
